# serializer version: 1
# name: test_RealCUGAN_2x
  ImageModelDescriptor(
    architecture=RealCUGANArch(
      id='RealCUGAN',
      name='RealCUGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=32, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealCUGAN_2x_fast
  ImageModelDescriptor(
    architecture=RealCUGANArch(
      id='RealCUGAN',
      name='RealCUGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=40, multiple_of=4, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'fast',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealCUGAN_2x_pro
  ImageModelDescriptor(
    architecture=RealCUGANArch(
      id='RealCUGAN',
      name='RealCUGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=32, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'pro',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealCUGAN_3x
  ImageModelDescriptor(
    architecture=RealCUGANArch(
      id='RealCUGAN',
      name='RealCUGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=32, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealCUGAN_3x_pro
  ImageModelDescriptor(
    architecture=RealCUGANArch(
      id='RealCUGAN',
      name='RealCUGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=32, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'pro',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RealCUGAN_4x
  ImageModelDescriptor(
    architecture=RealCUGANArch(
      id='RealCUGAN',
      name='RealCUGAN',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=32, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
